--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>
         About Me
     </h1>
+    <img src="Facetune_24-04-2023-08-46-10.jpeg">
+    <P>
+        I am currently studying Game Design as an undergraduate at UCF.
+
+    </P>
 </body>
 </html>
