--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     </h1>
     <img src="Facetune_24-04-2023-08-46-10.jpeg">
     <P>
-        I am currently studying Game Design as an undergraduate at UCF.
+        Hello! I am currently pursuing a Digital Media degree in game design at UCF, with a focus in level design.
+        At the time of writing this, I am senior and planning on graduating UCF at the end of spring in 2026.
+        While I focus on level design, I have also been working on and specializing in UI-design and Narrative.
+        <br /><br />
+        Game design has always been a pashion since I was in middle school. I would often go home and write out ideas, mechanics, and characters
+        for my own games. I would spend hours making my own board games, forcing my family to play them, or make my own obstacle courses and challenges 
+        within sandbox games like minecraft.
+
+
 
     </P>
 </body>
