--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>WesleYatesPortfolio</title>
 </head>
 <body>
+    <h2>
+        <a href="projects.html" target="_self">My Projects</a>
+    </h2>
     <h1>
         About Me
     </h1>
     <img src="Facetune_24-04-2023-08-46-10.jpeg">
+    <div class="AboutMeDescription">
     <P>
         Hello! I am currently pursuing a Digital Media degree in game design at UCF, with a focus in level design.
         At the time of writing this, I am senior and planning on graduating UCF at the end of spring in 2026.
@@ -20,8 +24,17 @@
         for my own games. I would spend hours making my own board games, forcing my family to play them, or make my own obstacle courses and challenges 
         within sandbox games like minecraft.
 
-
-
     </P>
+        
+    </div>
+     
+    <h1>
+        Skills
+    </h1>
+
+    <h3>
+         Unity Level Design UI Design HTML and CSS Unreal Communication Light Design
+    </h3>
+
 </body>
 </html>
