--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h2>
+        <div class="pageLinks">
         <a href="projects.html" target="_self">My Projects</a>
+        <a href="index.html" target="_self">About Me</a>
+        </div>
     </h2>
     <h1>
         About Me
@@ -28,13 +31,21 @@
         
     </div>
      
-    <h1>
+    <h2>
         Skills
-    </h1>
+    </h2>
 
-    <h3>
-         Unity Level Design UI Design HTML and CSS Unreal Communication Light Design
-    </h3>
+    <h4>
+    <ul>
+        <li>Unity</li>
+        <li>Unreal Engine</li>
+        <li>Level Design</li>
+        <li>UI Design</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Communication</li>
+    </ul>
+    </h4>
 
 </body>
 </html>
