--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,12 @@
     </title>
 </head>
 <body>
+    <h2>
+        <div class="pageLinks">
+        <a href="index.html" target="_self">About Me</a>
+        <a href="projects.html" target="_self">My Projects</a>
+        </div>
+    </h2>
 <h1>My Projects</h1>
 </body>
 
