--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h2>
         <div class="pageLinks">
+         <a href="index.html" target="_self">About Me</a>
         <a href="projects.html" target="_self">My Projects</a>
-        <a href="index.html" target="_self">About Me</a>
         </div>
     </h2>
     <h1>
@@ -36,15 +36,16 @@
     </h2>
 
     <h4>
+    <div class="SkillList">
     <ul>
         <li>Unity</li>
         <li>Unreal Engine</li>
         <li>Level Design</li>
         <li>UI Design</li>
-        <li>Html</li>
-        <li>CSS</li>
+        <li>Basic Html and CSS</li>
         <li>Communication</li>
     </ul>
+    </div>
     </h4>
 
 </body>
