--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>WesleYatesPortfolio</title>
 </head>
 <body>
+    <h1>
+        Wesley Yates' Portfoilo
+    </h1>
     <h2>
         <div class="pageLinks">
          <a href="index.html" target="_self">About Me</a>
@@ -16,16 +19,19 @@
     <h1>
         About Me
     </h1>
-    <img src="Facetune_24-04-2023-08-46-10.jpeg">
+    <div class="AboutMeImage">
+     <img src="Facetune_24-04-2023-08-46-10.jpeg">
+    </div>
     <div class="AboutMeDescription">
     <P>
-        Hello! I am currently pursuing a Digital Media degree in game design at UCF, with a focus in level design.
-        At the time of writing this, I am senior and planning on graduating UCF at the end of spring in 2026.
-        While I focus on level design, I have also been working on and specializing in UI-design and Narrative.
+        Hello! I am an aspiring Game designer currently studying at the Univerisity of Central Florida. 
+        As of writing this, I am a senior about to enter my final semester for my Bachelor's degree in Digital Media for Game design!
+        During my time here at UCF, I am studying level design, with a special focus on UI design and Narrative Design.
         <br /><br />
-        Game design has always been a pashion since I was in middle school. I would often go home and write out ideas, mechanics, and characters
-        for my own games. I would spend hours making my own board games, forcing my family to play them, or make my own obstacle courses and challenges 
-        within sandbox games like minecraft.
+        I have loved games ever since I was a kid, regardless if it was a board game or video game. I have always had a love for making games, 
+        as I would constantly create games, or alter existing ones when I was younger and force my family to play them. When I was in middle school, I became
+        interested in game design, and would spend hours on end in sandbox games and level editors like Minecraft and Super Mario Maker. It was not until 
+        late high school where I decided to focus on game design as a career.
 
     </P>
         
