--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,34 @@
         </div>
     </h2>
 <h1>My Projects</h1>
+
+<div Class = "Reconnection">
+
+<h3> Reconnection </h3>
+<h4> 2025-2026 Workshop Project (WIP)</h4>
+<h4> Role: Tech Lead/UI Designer</h4>
+<p> Reconnection is a game about old friends reconnecting 
+    through a tabletop RPG akin to Dungeons and Dragons. It is a narrative-driven game
+    that emphasizes the choices the player makes when interacting with their fellow players. 
+    This project consists of 8 team members, and is being developed in Unreal Engine.
+    <br/><br/>
+    My role in this project is the Tech Lead, where I oversee what is being implemented in engine, who is currently in engine,
+    and managing when we build our project. I am also a UI designer and level designer for this project. For UI design, I have worked on
+    designing layouts for our combat screen, Real World Scenes, Dialogue, and Exploration Scenes. I am also responsible for adding functionality
+    to these menus through Unreal's Blueprints. Working with our only programmer, we came up with a dialouge system for our game utilizing blueprints and the comabt system
+    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.   
+
+</p>
+
+</div>
+
+<div Class= "Fearosis">
+
+<h3> Fearosis </h3>
+<h4> 2025 Casual Game Production Project</h4>
+<h4> Role: Level Designer, UI designer</h4>
+</div>
+
 </body>
 
 </html>
