My Projects Update

--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,9 @@
     </title>
 </head>
 <body>
+    <h1>
+        Wesley Yates' Portfoilo
+    </h1>
     <h2>
         <div class="pageLinks">
         <a href="index.html" target="_self">About Me</a>
@@ -18,6 +21,12 @@
 
 <div Class = "Reconnection">
 
+<div class="Combat_Scene_ScreenShot">
+
+<img src="Combat_Scene_ScreenShot.png"> 
+
+</div>
+
 <h3> Reconnection </h3>
 <h4> 2025-2026 Workshop Project (WIP)</h4>
 <h4> Role: Tech Lead/UI Designer</h4>
@@ -26,11 +35,15 @@
     that emphasizes the choices the player makes when interacting with their fellow players. 
     This project consists of 8 team members, and is being developed in Unreal Engine.
     <br/><br/>
-    My role in this project is the Tech Lead, where I oversee what is being implemented in engine, who is currently in engine,
+
+    <div class = "Dialogue_Widget_Screenshot">
+    <img src="Dialogue_Widget_ScreenShot.png">
+    </div>
+    <p>My role in this project is the Tech Lead, where I oversee what is being implemented in engine, who is currently in engine,
     and managing when we build our project. I am also a UI designer and level designer for this project. For UI design, I have worked on
     designing layouts for our combat screen, Real World Scenes, Dialogue, and Exploration Scenes. I am also responsible for adding functionality
     to these menus through Unreal's Blueprints. Working with our only programmer, we came up with a dialouge system for our game utilizing blueprints and the comabt system
-    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.   
+    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.</p>   
 
 </p>
 
@@ -41,6 +54,19 @@
 <h3> Fearosis </h3>
 <h4> 2025 Casual Game Production Project</h4>
 <h4> Role: Level Designer, UI designer</h4>
+
+<div class="MapScreenshot">
+
+<img src="Map Screenshot.png">
+
+</div>
+
+<p> Fearosis is a simulation styled game for mobile devices. In the game, you pick an evil entity, ranging from an evil Ai, to a disease that turns people into monsters.
+    Your goal is to upgrade your entity, and infect everyone with monsterism. You accomplish this through upgrades, which increases one or more of your stats: Fear, Notoriety, Prejudice, and Pain.
+    These stats interact with each other, and each day, the population of the town you are trying to infect will respond with events. These events will affect your stats that you recieve from upgrades,
+    either increasing. decreasing the amount gained when upgraded.
+    Our team consisted of 7 members, and was developed using the Unity Engine.
+</p>
 </div>
 
 </body>
