class updated trying to fix

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
     Our team consisted of 7 members, and was developed using the Unity Engine.
 </p>
 
-<div class="Upgrade_Descriptions_Screenshot">
+<div class="Descriptions_Screenshot">
 
 <img src="Upgrade_Descriptions_Screenshot.png">
 
