Is this a github problem?

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
 
 </div>
 
-<div class="Upgrades_ScreenShot">
+<div class="UpgradesScreenShot">
 
 <img src="Upgrades_ScreenShot.png">
 
@@ -75,7 +75,7 @@
     Our team consisted of 7 members, and was developed using the Unity Engine.
 </p>
 
-<div class="Descriptions_Screenshot">
+<div class="DescriptionsScreenshot">
 
 <img src="Upgrade_Descriptions_Screenshot.png">
 
