--- a/projects.html
+++ b/projects.html
@@ -84,8 +84,8 @@
 <br/><br/>
 <p>
     My main role for Fearosis was designing the layouts for the UI during gameplay, making sure it
-    scaled properly for mobile devices. One goal I had for the layout of the game was to make sure it was not too cluttered,
-    for the player, so they would not get overwhelmed with a bunch of different options. This also allowed them to watch the little people
+    scaled properly for mobile devices. One goal I had for the layout of the game was to make sure it was not too cluttered
+    for the player so they would not get overwhelmed with a bunch of different options. This also allowed them to watch the little people
     run around the town. The solution was to condense the different tabs into a single button that would dropdown to reveal the four buttons
     that would take the player to the different screens. The screen I worked the most in layouting was the upgrades screen. The upgrade screen needed to showcase
     four different tabs of types of upgrades, with each tab having ten upgrades a piece, along with a place to provide descriptions and information for each upgrade.
@@ -93,10 +93,10 @@
     the visualizer to the left, which would show the upgrade name, description, cost, and the button to activate it. This kept the screen simplle and uncluttered, leading
     to a more streamlined user experience.
     <br/><br/>
-    My other Role was creating Upgrades and Events for each of the different monsters. Each monster would habe 40 upgrades in total, with 10 for each type.
-    These 10 would be then put on a 'updgrade tree', where certain upgrades had to be unlocked first, before later ones could be purchased. This gave me restrictions, as I had to keep in mind which specific
+    My other Role was creating Upgrades and Events for each of the different monsters. Each monster would have 40 upgrades in total, with 10 for each type.
+    These 10 would then be put on an 'updgrade tree', where certain upgrades had to be unlocked first, before later ones could be purchased. This gave me restrictions, as I had to keep in mind which specific
     monster I was writing for, which type of upgrade (For example, blood type for Skinwalker), and where it stood within the upgrade tree. Even with these restrictions, it was fun writing them,
-    with each tree acting sort of like a narrative, where as upgrades progressed, they would feel more intense. Not only the amount of points given, but what they did within the world of Fearosis.
+    with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
     <br/>
     On the left is a screenshot of the document I used to keep track of the upgrades I was writing. This portion comes from the Physical Upgrade Tree from Infectious Monsterism.</p>
 
