--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
     monster I was writing for, which type of upgrade (For example, blood type for Skinwalker), and where it stood within the upgrade tree. Even with these restrictions, it was fun writing them,
     with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
     <br/>
-    On the left is a screenshot of the document I used to keep track of the upgrades I was writing. This portion comes from the Physical Upgrade Tree from Infectious Monsterism.</p>
+    On the left is a screenshot of the document I used to keep track of the upgrades I was writing. This portion comes from the Physical Upgrades section from Infectious Monsterism.</p>
 
 </p>
 </div>
