Creature Carnival Begin

--- a/projects.html
+++ b/projects.html
@@ -103,6 +103,15 @@
 </p>
 </div>
 
+<div Class = "Creature Carnival">
+
+<h3> Creature Carnival </h3>
+<h4> 2025 Game Production Project</h4>
+<h4> Role: Level Designer/Tech</h4>
+
+<P>Creature Carnival is a 3D platformer where you play as a balloon animal,</P>
+
+</div>
 </body>
 
 </html>
