--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,20 @@
 </p>
 </div>
 
-<div Class = "Creature Carnival">
+<div Class= "Jamsepticeye">
+
+<h3> Deadtective </h3>
+<h4> 2025 Jamsepticeye Game Jam</h4>
+<h4> Role: UI Designer/Level Designer</h4>
+
+<p> Deadtective is a point and click adventure game where you play as a detective, retracing the clues and solving the case to a murder, putting the spirit that haunts the house to rest.
+    As the detective, you are able to enter the spirit world, finding clues that you normally couldn't have in the real world.
+    Our team consisted of 7 team members, and was developed in less than 5 days using the Unity Engine.
+</p>
+
+</div>
+
+<div Class = "Creature_Carnival">
 
 <h3> Creature Carnival </h3>
 <h4> 2025 Game Production Project</h4>
