--- a/projects.html
+++ b/projects.html
@@ -48,23 +48,17 @@
 
 </p>
 
+
 </div>
 
 <div Class= "Fearosis">
+
+
 
 <h3> Fearosis </h3>
 <h4> 2025 Casual Game Production Project</h4>
 <h4> Role: Level Designer, UI designer</h4>
 
-<div class="MapScreenshot">
-
-<img src="Map Screenshot.png">
-
-</div>
-
-<div class="UpgradesScreenShot">
-
-<img src="Upgrades_ScreenShot.png">
 
 </div>
 
@@ -75,13 +69,9 @@
     Our team consisted of 7 members, and was developed using the Unity Engine.
 </p>
 
-<div class="DescriptionsScreenshot">
 
-<img src="Upgrade_Descriptions_Screenshot.png">
 
-</div>
-
-<br/><br/>
+<br/><br/><br/>
 <p>
     My main role for Fearosis was designing the layouts for the UI during gameplay, making sure it
     scaled properly for mobile devices. One goal I had for the layout of the game was to make sure it was not too cluttered
@@ -97,10 +87,25 @@
     These 10 would then be put on an 'updgrade tree', where certain upgrades had to be unlocked first, before later ones could be purchased. This gave me restrictions, as I had to keep in mind which specific
     monster I was writing for, which type of upgrade (For example, blood type for Skinwalker), and where it stood within the upgrade tree. Even with these restrictions, it was fun writing them,
     with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
-    <br/>
-    On the left is a screenshot of the document I used to keep track of the upgrades I was writing. This portion comes from the Physical Upgrades section from Infectious Monsterism.</p>
 
 </p>
+
+<div class="MapScreenshot">
+
+<img src="Map Screenshot.png">
+
+</div>
+
+<div class="UpgradesScreenShot">
+
+<img src="Upgrades_ScreenShot.png">
+
+<div class="DescriptionsScreenshot">
+
+<img src="Upgrade_Descriptions_Screenshot.png">
+
+</div>
+
 </div>
 
 <div Class= "Jamsepticeye">
@@ -122,7 +127,7 @@
 <h4> 2025 Game Production Project</h4>
 <h4> Role: Level Designer/Tech</h4>
 
-<P>Creature Carnival is a 3D platformer where you play as a balloon animal,</P>
+<P>Creature Carnival is a 3D platformer where you play as a magical balloon animal,</P>
 
 </div>
 </body>
