--- a/projects.html
+++ b/projects.html
@@ -117,6 +117,12 @@
 <p> Deadtective is a point and click adventure game where you play as a detective, retracing the clues and solving the case to a murder, putting the spirit that haunts the house to rest.
     As the detective, you are able to enter the spirit world, finding clues that you normally couldn't have in the real world.
     Our team consisted of 7 team members, and was developed in less than 5 days using the Unity Engine.
+    <br/><br/>
+    My role in this project was to create the layout that the player will use to navigate the different rooms of the house.
+    Our initial plan was to have the player move within the house, however, due to limited time that had to be changed.
+    Our new plan was to have multiple screens the player would navigate, by clicking a button on each side of the screen.
+    For example, clicking up would go up to the bedroom, and clicking button on the bottom of the screen would take you back to where you were before.
+    
 </p>
 
 </div>
