youtube link added

--- a/projects.html
+++ b/projects.html
@@ -101,6 +101,8 @@
     These 10 would then be put on an 'updgrade tree', where certain upgrades had to be unlocked first, before later ones could be purchased. This gave me restrictions, as I had to keep in mind which specific
     monster I was writing for, which type of upgrade (For example, blood type for Skinwalker), and where it stood within the upgrade tree. Even with these restrictions, it was fun writing them,
     with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
+    <br/>
+    You can watch the trailer for Fearosis <a href="https://www.youtube.com/watch?v=BdyhlXdOtG0">here!</a>
 
 </p>
 
