--- a/index.html
+++ b/index.html
@@ -44,12 +44,26 @@
     <h4>
     <div class="SkillList">
     <ul>
-        <li>Unity</li>
-        <li>Unreal Engine</li>
         <li>Level Design</li>
         <li>UI Design</li>
         <li>Basic Html and CSS</li>
         <li>Communication</li>
+        <li>Lighting</li>
+        <li>Post-Processing</li>
+    </ul>
+    </div>
+    </h4>
+
+    <h2>
+    Tools
+    </h2>
+
+    <h4>
+    <div class="ToolsList">
+    <ul>
+        <li>Unreal Engine 5</li>
+        <li>Unity 6</li>
+        <li>Google Sheets</li>
     </ul>
     </div>
     </h4>
