--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,11 @@
     and managing when we build our project. I am also a UI designer and level designer for this project. For UI design, I have worked on
     designing layouts for our combat screen, Real World Scenes, Dialogue, and Exploration Scenes. I am also responsible for adding functionality
     to these menus through Unreal's Blueprints. Working with our only programmer, we came up with a dialouge system for our game utilizing blueprints and the comabt system
-    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.</p>   
+    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.
 
+    <br/>
+    
+    Itch.io page:
 </p>
 
 
@@ -103,6 +106,7 @@
     with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
     <br/>
        You can watch the trailer for Fearosis <a href="https://www.youtube.com/watch?v=BdyhlXdOtG0">here!</a>
+       Itch.io page:
 
 </p>
 
@@ -124,6 +128,10 @@
     Our initial plan was to have the player move within the house, however, due to limited time that had to be changed.
     Our new plan was to have multiple screens the player would navigate, by clicking a button on each side of the screen.
     For example, clicking up would go up to the bedroom, and clicking button on the bottom of the screen would take you back to where you were before.
+
+    <br/>
+
+    Itch.io page:
     
 </p>
 
@@ -135,7 +143,9 @@
 <h4> 2025 Game Production Project</h4>
 <h4> Role: Level Designer/Tech</h4>
 
-<P>   Creature Carnival is a 3D platformer where you play as a magical balloon animal,</P>
+<P>   Creature Carnival is a 3D platformer where you play as a magical balloon animal escaping the clutches from evil ring leader.
+    Our team consisted of 9 members and was developed using Unity
+</P>
 
 </div>
 </body>
