--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li>Communication</li>
         <li>Lighting</li>
         <li>Post-Processing</li>
+        <li>Narrative Design</li>
     </ul>
     </div>
     </h4>
