--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
     to these menus through Unreal's Blueprints. Working with our only programmer, we came up with a dialouge system for our game utilizing blueprints and the comabt system
     reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.
 
-    <br/>
+    <br/><br/>
     
     Itch.io page:
 </p>
@@ -106,6 +106,7 @@
     with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
     <br/>
        You can watch the trailer for Fearosis <a href="https://www.youtube.com/watch?v=BdyhlXdOtG0">here!</a>
+       <br/><br/>
        Itch.io page:
 
 </p>
@@ -129,7 +130,7 @@
     Our new plan was to have multiple screens the player would navigate, by clicking a button on each side of the screen.
     For example, clicking up would go up to the bedroom, and clicking button on the bottom of the screen would take you back to where you were before.
 
-    <br/>
+    <br/><br/>
 
     Itch.io page:
     
@@ -139,13 +140,23 @@
 
 <div Class = "Creature_Carnival">
 
+<div class="CopyofBallon">
+<img src="Copy of balloon.png">
+</div>
+
 <h3> Creature Carnival </h3>
 <h4> 2025 Game Production Project</h4>
 <h4> Role: Level Designer/Tech</h4>
 
-<P>   Creature Carnival is a 3D platformer where you play as a magical balloon animal escaping the clutches from evil ring leader.
+<p>  Creature Carnival is a 3D platformer where you play as a magical balloon animal escaping the clutches from evil ring leader.
     Our team consisted of 9 members and was developed using Unity
-</P>
+    <br/><br/>
+    My role in this project was level designer, specifically working on our 'monkey' level. This level focused on climbing up to the top of a huge circus.
+    I designed the layout of the level, as well as importing all assets into the scene. I also worked on making simple animations within unity for the jellyfish enemies.
+    While my main focus was the monkey level, I also worked on the initial layout design for the 'Rhino' level as well.
+    <br/><br/>
+    Itch.io page:
+</p>
 
 </div>
 </body>
