trying to fix alignment

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
     </P>
         
     </div>
-     
+
+     <div class="skilltitle">
     <h2>
         Skills
     </h2>
+    </div>
 
     <h4>
     <div class="SkillList">
@@ -55,9 +57,11 @@
     </div>
     </h4>
 
+    <div class ="tooltitle">
     <h2>
     Tools
     </h2>
+    </div>
 
     <h4>
     <div class="ToolsList">
