Skills and tools combine

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
      <div class="skilltitle">
     <h2>
-        Skills
+        Skills and Tools
     </h2>
     </div>
 
@@ -53,19 +53,6 @@
         <li>Lighting</li>
         <li>Post-Processing</li>
         <li>Narrative Design</li>
-    </ul>
-    </div>
-    </h4>
-
-    <div class ="tooltitle">
-    <h2>
-    Tools
-    </h2>
-    </div>
-
-    <h4>
-    <div class="ToolsList">
-    <ul>
         <li>Unreal Engine 5</li>
         <li>Unity 6</li>
         <li>Google Sheets</li>
@@ -73,5 +60,6 @@
     </div>
     </h4>
 
+   
 </body>
 </html>
