Updated for school

--- a/projects.html
+++ b/projects.html
@@ -19,42 +19,19 @@
     </h2>
 <h1>My Projects</h1>
 
-<div Class = "Reconnection">
-
-<div class="Combat_Scene_ScreenShot">
-
-<img src="Combat_Scene_ScreenShot.png"> 
-
-</div>
-
- <div class = "Dialogue_Widget_Screenshot">
-    <img src="Dialogue_Widget_ScreenShot.png">
-</div>
-
-<h3> Reconnection </h3>
-<h4> 2025-2026 Workshop Project (WIP)</h4>
-<h4> Role: Tech Lead/UI Designer</h4>
-<p>    Reconnection is a game about old friends reconnecting 
-    through a tabletop RPG akin to Dungeons and Dragons. It is a narrative-driven game
-    that emphasizes the choices the player makes when interacting with their fellow players. 
-    This project consists of 8 team members, and is being developed in Unreal Engine.
-    <br/><br/>
-
-    <p>   My role in this project is the Tech Lead, where I oversee what is being implemented in engine, who is currently in engine,
-    and managing when we build our project. I am also a UI designer and level designer for this project. For UI design, I have worked on
-    designing layouts for our combat screen, Real World Scenes, Dialogue, and Exploration Scenes. I am also responsible for adding functionality
-    to these menus through Unreal's Blueprints. Working with our only programmer, we came up with a dialouge system for our game utilizing blueprints and the comabt system
-    reminiscent of old school RPGS. I have also designed the layout for our settings menu, as well as implementing functionality to the menu through blueprints.
-
-    <br/><br/>
-    
-    Itch.io page:
-</p>
-
-
 </div>
 
 <div Class= "Fearosis">
+
+<div class="MapScreenshot">
+
+<img src="Map Screenshot.png">
+
+</div>
+
+<div class="UpgradesScreenShot">
+
+<img src="Upgrades_ScreenShot.png">
 
 
 
@@ -72,16 +49,6 @@
     Our team consisted of 7 members, and was developed using the Unity Engine.
 </p>
 
-<div class="MapScreenshot">
-
-<img src="Map Screenshot.png">
-
-</div>
-
-<div class="UpgradesScreenShot">
-
-<img src="Upgrades_ScreenShot.png">
-
 <div class="DescriptionsScreenshot">
 
 <img src="Upgrade_Descriptions_Screenshot.png">
@@ -90,53 +57,29 @@
 
 <br/><br/><br/>
 <p>
-       My main role for Fearosis was designing the layouts for the UI during gameplay, making sure it
-    scaled properly for mobile devices. One goal I had for the layout of the game was to make sure it was not too cluttered
-    for the player so they would not get overwhelmed with a bunch of different options. This also allowed them to watch the little people
-    run around the town. The solution was to condense the different tabs into a single button that would dropdown to reveal the four buttons
-    that would take the player to the different screens. The screen I worked the most in layouting was the upgrades screen. The upgrade screen needed to showcase
-    four different tabs of types of upgrades, with each tab having ten upgrades a piece, along with a place to provide descriptions and information for each upgrade.
-    Making sure the layout was not too cluttered, the best solution we found was to have each button be represented with an icon, which when clicked would populate a
-    the visualizer to the left, which would show the upgrade name, description, cost, and the button to activate it. This kept the screen simplle and uncluttered, leading
-    to a more streamlined user experience.
+       I designed the UI layouts for the game. My main focus for this project was to design an intuitive layout for mobile devices in mind, a field I have never worked on before.
+    I had to design a layout that was simple to navigate, but had a lot of empty space so the player can see what was going on in the town.
+    The layout I ended up finalizing was condensing buttons into small tabs, as it compacted everything to a small area of the screen, and would allow players to take in only a few buttons per menu. 
+    This idea was carried over to all screens in the game, splitting upgrades into four tabs, menus into separate tabs, as well as other features such as credits and player statistics.
+    This created a streamlined experience for the player, as they could easily travel to whichever menu they needed through the main dropdown, without it feeling overwhelming or too complex.
+    This design created an uncluttered layout that did not obscure the main spectacle of the game, being the people turning into monsters in the town.
     <br/><br/>
-       My other Role was creating Upgrades and Events for each of the different monsters. Each monster would have 40 upgrades in total, with 10 for each type.
-    These 10 would then be put on an 'updgrade tree', where certain upgrades had to be unlocked first, before later ones could be purchased. This gave me restrictions, as I had to keep in mind which specific
-    monster I was writing for, which type of upgrade (For example, blood type for Skinwalker), and where it stood within the upgrade tree. Even with these restrictions, it was fun writing them,
-    with each tree acting sort of like a narrative, where as upgrades progressed, the intenser they got. Not only the amount of points given, but what they did within the world of Fearosis.
+    I also created all of the upgrades, creating the pathway for each one and assigning upgrade values correlating to the theming of the upgrade.
+    Each upgrade also had a description, providing flavor to each of the upgrades that gave insight into not only what the player was doing,
+    but the world they were affecting.
     <br/>
        You can watch the trailer for Fearosis <a href="https://www.youtube.com/watch?v=BdyhlXdOtG0">here!</a>
        <br/><br/>
-       Itch.io page:
-
-</p>
-
-
-
-</div>
-
-<div Class= "Jamsepticeye">
-
-<h3> Deadtective </h3>
-<h4> 2025 Jamsepticeye Game Jam</h4>
-<h4> Role: UI Designer/Level Designer</h4>
-
-<p>    Deadtective is a point and click adventure game where you play as a detective, retracing the clues and solving the case to a murder, putting the spirit that haunts the house to rest.
-    As the detective, you are able to enter the spirit world, finding clues that you normally couldn't have in the real world.
-    Our team consisted of 7 team members, and was developed in less than 5 days using the Unity Engine.
-    <br/><br/>
-    My role in this project was to create the layout that the player will use to navigate the different rooms of the house.
-    Our initial plan was to have the player move within the house, however, due to limited time that had to be changed.
-    Our new plan was to have multiple screens the player would navigate, by clicking a button on each side of the screen.
-    For example, clicking up would go up to the bedroom, and clicking button on the bottom of the screen would take you back to where you were before.
-
-    <br/><br/>
-
-    Itch.io page:
     
+
 </p>
 
+
+
+
 </div>
+
+
 
 <div Class = "Creature_Carnival">
 
