--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <li>Unreal Engine 5</li>
         <li>Unity 6</li>
         <li>Google Sheets</li>
+        <li>Figma</li>
     </ul>
     </div>
     </h4>
