--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
     This idea was carried over to all screens in the game, splitting upgrades into four tabs, menus into separate tabs, as well as other features such as credits and player statistics.
     This created a streamlined experience for the player, as they could easily travel to whichever menu they needed through the main dropdown, without it feeling overwhelming or too complex.
     This design created an uncluttered layout that did not obscure the main spectacle of the game, being the people turning into monsters in the town.
-    <br/><br/>
+    <br/>
     I also created all of the upgrades, creating the pathway for each one and assigning upgrade values correlating to the theming of the upgrade.
     Each upgrade also had a description, providing flavor to each of the upgrades that gave insight into not only what the player was doing,
     but the world they were affecting.
@@ -75,11 +75,40 @@
 </p>
 
 
-
-
 </div>
 
+<div  Class = "IllumenHorizons">
 
+    <div class="IllumenHorizonsFirstFloor">
+        <img src="IllumenHorizonsFirstFloor.png">
+    </div>
+
+    <div class="IllumenHorizonsScreenshot">
+        <img src="IllumenHorizons LLC.png">
+    </div>
+
+<h3>Illumen Horizons LLC</h3>
+<h4>2025 Game Production Project</h4>
+<h4>Role: Level Designer/Tech</h4>
+
+<p> Illumen Horizon LLC is a 3D 'Hallway' horror game where the goal is to traverse the maze
+    and find the flashlight, all while avoiding a monster that may, or may not, be chasing you.
+    This game was developed by a team of 5 members, using Unity 6.
+</p>
+<p> For this project, I worked on the level design on the first floor, as well as the lighting, post processing,
+    and Main Menu screen. With our hallway criteria in mind, I still wanted to design a level that
+    felt claustropobic, making the required 'hallway' feel like a rull pug, where the player must retreat into the
+    darker and winder corridors to make it to the other side and eventually the stairwells. To emphasize this feeling,
+    I used environmental lighting, obscurring the distance the player can see, and limiting lighting with ominous,
+    faint, red glows. 
+
+<p>
+    When creating the main menu, I was inspired to create a main menu screen similar to the ones seen in indie horror games,
+    such as Fnaf. To emulate this effect, I used post processing effects, creating static noise and high contrast between the
+    dark level in the background, and the flourescent text simulating a business atmosphere.
+</p>
+
+</div>
 
 <div Class = "Creature_Carnival">
 
@@ -92,13 +121,12 @@
 <h4> Role: Level Designer/Tech</h4>
 
 <p>  Creature Carnival is a 3D platformer where you play as a magical balloon animal escaping the clutches from evil ring leader.
-    Our team consisted of 9 members and was developed using Unity
+    Our team consisted of 9 members and was developed using Unity 6.
     <br/><br/>
-    My role in this project was level designer, specifically working on our 'monkey' level. This level focused on climbing up to the top of a huge circus.
+    In this project I was level designer, specifically working on our 'monkey' level. This level focused on climbing up to the top of a huge circus.
     I designed the layout of the level, as well as importing all assets into the scene. I also worked on making simple animations within unity for the jellyfish enemies.
-    While my main focus was the monkey level, I also worked on the initial layout design for the 'Rhino' level as well.
+    While my main focus was the monkey level, I also worked on the initial layout and design for the 'Rhino' level as well.
     <br/><br/>
-    Itch.io page:
 </p>
 
 </div>
