New Images Added

--- a/projects.html
+++ b/projects.html
@@ -112,8 +112,12 @@
 
 <div Class = "Creature_Carnival">
 
-<div class="CopyofBallon">
-<img src="Copy of balloon.png">
+<div class="CreatureCircusIngame">
+    <img src="CreatureCircusIngame.png">
+</div>
+
+<div class="MonkeyLevelEditor">
+    <img src="MonkeyLevelEditor.png">
 </div>
 
 <h3> Creature Carnival </h3>
