--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
 </p>
 <p> For this project, I worked on the level design on the first floor, as well as the lighting, post processing,
     and Main Menu screen. With our hallway criteria in mind, I still wanted to design a level that
-    felt claustropobic, making the required 'hallway' feel like a rull pug, where the player must retreat into the
+    felt claustropobic, making the required 'hallway' feel like a rug pull, where the player must retreat into the
     darker and winder corridors to make it to the other side and eventually the stairwells. To emphasize this feeling,
     I used environmental lighting, obscurring the distance the player can see, and limiting lighting with ominous,
     faint, red glows. 
