Whiteboxing Picture added

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
 <div  Class = "IllumenHorizons">
 
     <div class="IllumenHorizonsFirstFloor">
-        <img src="IllumenHorizonsFirstFloor.png">
+        <img src="IllumenWhitebox.jpg">
     </div>
 
     <div class="IllumenHorizonsScreenshot">
